src/test/deca/syntax/invalid/resultats/test6_print-lex.res
'{': [@0,287:287='{',<36>,14:0]
'print': [@1,290:294='print',<17>,15:1]
'(': [@2,295:295='(',<34>,15:6]
STRING: [@3,296:302='"Hello"',<47>,15:7]
';': [@4,303:303=';',<39>,15:14]
'}': [@5,319:319='}',<37>,16:0]
